Amend h tag for .statement to ensure sequential, amend input label for 'name' on form (had not been updated from old version 'first-name'), and increase radio button size for better usability on mobile

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
             <form action="thankyou.html">
                 <div class="flex-container flex-form-item">
                     <label for="name">Name</label>
-                    <input type="text" id="first-name" name="first-name" required>
+                    <input type="text" id="name" name="name" required>
                 </div>
                 <div class="flex-container flex-form-item">
                     <label for="email">Email Address</label>
@@ -77,15 +77,15 @@
                     <p>What is your primary reason for contacting us today?</p>
                 </div>
                 <div class="flex-container flex-row-item">
-                    <input type="radio" id="date-booking" name="contact-reason" value="Activity enquiry/booking" required>
+                    <input type="radio" class="radio" id="date-booking" name="contact-reason" value="Activity enquiry/booking" required>
                     <label for="date-booking">Upcoming Date</label>
                 </div>
                 <div class="flex-container flex-row-item">
-                    <input type="radio" id="suggestion" name="contact-reason" value="Suggest an activity or location">
+                    <input type="radio" class="radio" id="suggestion" name="contact-reason" value="Suggest an activity or location">
                     <label for="suggestion">Suggestion</label>
                 </div>
                 <div class="flex-container flex-row-item">
-                    <input type="radio" id="other" name="contact-reason" value="Other">
+                    <input type="radio" class="radio" id="other" name="contact-reason" value="Other">
                     <label for="other">Other</label>
                 </div>
                 <div class="flex-container flex-form-item">
@@ -152,7 +152,7 @@
                 </li>
             </ul>
         </div>
-        <h4 id="statement">Please note this is a fictional site created for educational purposes only</h4>
+        <h2 id="statement">Please note this is a fictional site created for educational purposes only</h2>
     </footer>
 
 <!-- font awesome script -->
