Amend .statement to be a class throughout all pages and update h tag for .statement on thank you page to ensure sequential

--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
                 </li>
             </ul>
         </div>
-        <h2 id="statement">Please note this is a fictional site created for educational purposes only</h2>
+        <h2 class="statement">Please note this is a fictional site created for educational purposes only</h2>
     </footer>
 
 <!-- font awesome script -->
