--- a/dates.html
+++ b/dates.html
@@ -230,7 +230,7 @@
                 </li>
             </ul>
         </div>
-        <h3 id="statement">Please note this is a fictional site created for educational purposes only</h3>
+        <h3 class="statement">Please note this is a fictional site created for educational purposes only</h3>
     </footer>
 
 <!-- font awesome script -->
