--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </li>
             </ul>
         </div>
-        <h4 id="statement">Please note this is a fictional site created for educational purposes only</h4>
+        <h4 class="statement">Please note this is a fictional site created for educational purposes only</h4>
     </footer>
 
 <!-- font awesome script -->
