--- a/thankyou.html
+++ b/thankyou.html
@@ -89,7 +89,7 @@
                 </li>
             </ul>
         </div>
-        <h4 id="statement">Please note this is a fictional site created for educational purposes only</h4>
+        <h2 class="statement">Please note this is a fictional site created for educational purposes only</h2>
     </footer>
 
 <!-- font awesome script -->
