Add z-index to sticky nav-bar to stop iframe from covering it on scroll

--- a/support.html
+++ b/support.html
@@ -123,7 +123,7 @@
     </section>
 
     <section>
-        <!-- Youtube video on mediation -->
+        <!-- Youtube video on meditation -->
         <div class="iframe-container" id="wellbeing-video">
             <iframe title="A short meditation video posted by Headspace on YouTube" width="560" height="315" src="https://www.youtube.com/embed/cEqZthCaMpo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
