Add User testing section to README to address client goals, first time visitor goals, returning visitor goals and frequent visitor goals

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
             <div>
                 <p><i class="fa-solid fa-envelope"></i><br>
                     Contact us directly by emailing<br>
-                    <a href="malito:hello@mumaandcub.org">hello@mumaandcub.org</a>
+                    <a href="mailto:hello@mumaandcub.org">hello@mumaandcub.org</a>
                 </p>
                 <p><i class="fa-brands fa-facebook-messenger"></i><br>
                     Send us a<br>
