Change section tag on thank you page to div tag as no headings required so div more semantically appropriate

--- a/thankyou.html
+++ b/thankyou.html
@@ -60,7 +60,7 @@
     </section>
 
     <!-- repeat of navigation links to redirect -->
-    <section class="page-info">
+    <div class="page-info">
         <p>Where would you like to go next?</p>
         <ul id="nav-links-list">
             <li><a class="button top-button" href="index.html">Home</a></li>
@@ -68,7 +68,7 @@
             <li><a class="button top-button" href="support.html">Support</a></li>
             <li><a class="button top-button" href="contact.html">Contact</a></li>
         </ul>
-    </section>
+    </div>
 
     <!-- footer -->
     <footer>
