--- a/support.html
+++ b/support.html
@@ -121,12 +121,12 @@
         
     </section>
 
-    <section>
+    <div>
         <!-- Youtube video on meditation -->
         <div class="iframe-container" id="wellbeing-video">
-            <iframe title="A short meditation video posted by Headspace on YouTube" width="560" height="315" src="https://www.youtube.com/embed/cEqZthCaMpo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe title="A short meditation video posted by Headspace on YouTube" width="560" height="315" src="https://www.youtube.com/embed/cEqZthCaMpo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-    </section>
+    </div>
 
     <!-- footer -->
     <footer>
