--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
     </section>
 
     <!-- contact form and contact details section -->
-    <section class="flex-container contact-section">
+    <div class="flex-container contact-section">
         <div class="contact-item">
             <!-- FORM -->
             <form action="thankyou.html">
@@ -124,14 +124,14 @@
                 </address>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- Google map -->
-    <section>
+    <div>
         <div class="map-container">
             <iframe title="Exeter on Google Maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48778.650759895405!2d-3.548652650994783!3d50.72447726551613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486c52c4d4498da7%3A0xa976e3256bdfad1e!2sExeter!5e1!3m2!1sen!2suk!4v1667396062774!5m2!1sen!2suk" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-    </section>
+    </div>
 
     <!-- footer -->
     <footer>
