Amend alt descriptions for images across all pages so they are more succinct

--- a/support.html
+++ b/support.html
@@ -63,7 +63,7 @@
 
     <!-- breastfeeding support section -->
     <section class="flex-container support-section">
-        <img src="assets/images/breastfeeding-muma.webp" alt="A black and white photo of a woman wearing jeans and a t-shirt sitting on a stool and breastfeeds her young baby">
+        <img src="assets/images/breastfeeding-muma.webp" alt="A black and white photo of a woman sitting on a stool and breastfeeding her young baby">
         <div class="flex-container support-text">
             <h3>Breastfeeding Support</h3>
             <p>Breastfeeding can come easily to some and be more difficult for others. Your first child might take to it immediately and your next might struggle. Whatever your journey may hold there are a lot of support resources and groups available to help you.</p>
@@ -103,7 +103,7 @@
 
     <!-- mindfulness and wellbeing support section -->
     <section class="flex-container support-section">
-        <img src="assets/images/meditating-muma.webp" alt="A mother and her two children sit next to eachother on a floor meditating. They are sitting in a burmese position with legs crossed and are in a big bright room">
+        <img src="assets/images/meditating-muma.webp" alt="A mother and her two children sit next to eachother on a floor meditating">
         <div class="flex-container support-text">
             <h3>Mindfulness and Wellbeing</h3>
             <p>It is so important to look after yourself. Practicing mindfulness can help us avoid becoming overwhelmed and to be more present in the moment. It can help us relax, sleep, and manage our feelings in a more gentle way.</p>
