--- a/thankyou.html
+++ b/thankyou.html
@@ -54,7 +54,7 @@
 
     <!-- page information -->
     <section class="page-info">
-        <img id=thank-you-image src="assets/images/girl-mobile-phone.webp" alt="a little girl dressed in a blue ballet outfit and wearing ballet shoes sits cross-legged on a desk playing with a mobile phone">
+        <img id=thank-you-image src="assets/images/girl-mobile-phone.webp" alt="a little girl wearing a ballet outfit sits cross-legged on a desk playing with a mobile phone">
         <h2>Thank you for getting in touch!</h2>
         <p>Your message has been successfully submitted and we'll be back in touch with you shortly!</p> 
     </section>
