--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     <!-- top section with next meet up info -->
     <section class="flex-container" id="top-section">
-        <img id="top-image" src="assets/images/girl-playroom.webp" alt="A little girl smiles at the camera with her fists raised up in the air to show she is having fun. She is in a room with toys on a desk in front of her">
+        <img id="top-image" src="assets/images/girl-playroom.webp" alt="A little girl is smiling in a playroom surrounded by wooden toys">
         <div class="flex-container" id="top-text">
             <h2>Join us at our next meet up</h2>
             <div class="flex-container" id="meet-ups">
@@ -86,7 +86,7 @@
             <p id="last-paragraph">If you have an activity or location that would make a great meet up please get in touch</p>
             <a class="button middle-button" href="contact.html">Make a suggestion!</a>
         </div>
-        <img id="middle-image" src="assets/images/play.webp" alt="Children's wooden alphabet blocks spell out the word 'play' with each letter appearing on an individual block in a different colour">
+        <img id="middle-image" src="assets/images/play.webp" alt="Children's wooden alphabet blocks spell out the word 'play'">
     </section>
 
     <!-- lower section with glimpse at support resource info -->
@@ -105,7 +105,7 @@
             </ul>
             <a class="button lower-button" href="support.html">Find out more</a>
         </div>
-        <img id="lower-image" src="assets/images/toddlers-playing.webp" alt="A young girl in a red dress builds a tower of blocks with a little boy dressed in green dungarees. They are sat on the floor playing with the blocks">
+        <img id="lower-image" src="assets/images/toddlers-playing.webp" alt="A young girl in a red dress builds a tower of blocks with a little boy dressed in green dungarees">
     </section>
 
     <!-- footer -->
